# first-order-lowpass-GRU

./: .gitignore  README.md  analysis_tools.py  create_dataset.py  create_dataset_v2.py  dataset.py  dataset_v2.py  export_to_onnx.py  generalization_curves.py  lowpass_rnn.onnx  lowpass_rnn.pt  model.py  model_eval.ipynb  model_tools.py  requirements.txt  test_generations.py  train.py  train_v2.py
onnx_inference_test/: .gitignore  CMakeLists.txt  inference_test.cpp
order2/: cheby1_ripple5_low.pt
